# pytest-presentation

./: .gitignore  README.md  benchmarks  index.html  package-lock.json  package.json
contrast/: index.html
contrast/js/: reveal.min.js
demo/: .gitignore  db.sqlite3  demo.sh  pyproject.toml  pytest.ini  requirements.txt
demo/customers/: factories.py  filters.py  serializers.py  views.py  viewsets.py
demo/demo/: settings.py  urls.py
demo/src/: 2_pytest_vs_unittest_test.py
demo/tests/: 1_assert_info_fail_test.py  2_assert_fail_unittest_test.py  3_pytest_vs_unittest_test.py  4_fixtures_test.py  5_parametrize_test.py  6_tdd_test.py  7_mock_test.py
js/: reveal.min.js
scripts/: build-with-contrast.sh
src/: index.html
