[tool.poetry]
name = "demo2"
version = "0.1.0"
description = ""
authors = ["santiago fraire <santiwilly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
